<resources>
    <string name="app_name">Hackathon</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_loans">Loans</string>
    <string name="title_account">Profile</string>
    <string name="email">Email or Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="fragment_home_title">Transaction Activity</string>
    <string name="phone_number">Phone Number 0712 345 678</string>
    <string name="signup_phone_number">Enter phone number</string>
    <string name="signup_button">Next</string>
    <string name="OTP"></string>
    <string name="otp_verification">OTP verification</string>
    <string name="a_one_time_password_will_be_sent_to_your_phone_number">A One Time Password will be sent to your phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="country_code">+254-</string>
    <string name="phone">712345678</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_sent">Enter OTP sent to </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="verify">verify</string>
    <string name="login_text">Enter the email /phone and password to login</string>
    <string name="no_account_sign_up">No account? Sign Up</string>
    <string name="mpesa_transactions">Activity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_user">Welcome User</string>
    <string name="date_of_birth">Date of birth DD/MM/YYY</string>
    <string name="select_gender">Select Gender</string>
    <string name="request_loan">Request Loan</string>
    <string name="view_status">View Status</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="loanAmount">
        <item>Input Request Amount</item>
        <item>Input different amount</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="get_loan">Get Loan</string>
    <string name="input_request_amount">Input Request Amount</string>
    <string name="input_different_amount">Input different amount</string>
    <string name="get_full_amount">Get full amount</string>

</resources>