<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/request_loan"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="230dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton android:id="@+id/radio_pirates"
                android:layout_width="170dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:text="@string/get_full_amount" />


            <RadioButton android:id="@+id/radio_ninjas"
                android:layout_width="210dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:text="@string/input_different_amount"/>

        </RadioGroup>

    </LinearLayout>

        <EditText
            android:hint="@string/input_request_amount"
            android:id="@+id/requestDifferentAmount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/getLoan"
            android:layout_marginTop="100dp"
            android:layout_margin="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/get_loan"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>





</ScrollView>