<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/signup"
            android:textColor="@color/colorTextPrimary"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/full_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="50dp"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/birthday"
            android:hint="@string/date_of_birth"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="25dp"
            android:inputType="date"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:layout_width="300dp"
            android:background="@null"
            android:importantForAutofill="no"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_height="30dp"
            android:id="@+id/gender"
            android:text="@string/select_gender"
            tools:listitem="@android:layout/simple_spinner_item"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:layout_marginTop="100dp"
                android:layout_margin="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/signup"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/loadingProgressBar"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>
</ScrollView>